# fastboot.efi

./: CONTRIBUTING.md  Cargo.toml  README.md  build-img.sh  build.rs  rawprogram-nvme.xml  rawprogram-ufs.xml
.github/workflows/: build.yml  qualcomm-organization-repolinter.yml  rust.yml
repart.d/: efi.conf
src/: abootimg.rs  initrd.rs  main.rs  memcardinfo.rs  peimage.rs  usb_device.rs
src/proto/: memcardinfo.rs  mod.rs  usb_device.rs
